[gd_scene load_steps=2 format=3 uid="uid://cqow47bch5ocs"]

[ext_resource type="Script" uid="uid://c65niyst5g33" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageDisplayer" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 170.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="FolderDialog" type="FileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2

[node name="Controls" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 114.0
grow_horizontal = 2

[node name="LoadFolder" type="Button" parent="Controls"]
layout_mode = 2
text = "Select Image Folder
"

[node name="Timers" type="OptionButton" parent="Controls"]
layout_mode = 2

[node name="ImageCount" type="SpinBox" parent="Controls"]
layout_mode = 2
min_value = 5.0
value = 20.0

[node name="StartSession" type="Button" parent="Controls"]
layout_mode = 2
text = "Start"

[node name="TimerDisplay" type="Label" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Timer"

[node name="ImgsLeft" type="Label" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="ImageTimer" type="Timer" parent="."]

[connection signal="dir_selected" from="FolderDialog" to="." method="_on_folder_dialog_dir_selected"]
[connection signal="pressed" from="Controls/LoadFolder" to="." method="_on_load_folder_pressed"]
[connection signal="pressed" from="Controls/StartSession" to="." method="_on_start_session_pressed"]
[connection signal="timeout" from="ImageTimer" to="." method="_on_image_timer_timeout"]
